# zavora-erp

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile.service  README.md  docker-compose.yml
crates/zavora-agents/: Cargo.toml
crates/zavora-agents/src/: lib.rs
crates/zavora-board/: Cargo.toml
crates/zavora-board/src/: main.rs
crates/zavora-core/: Cargo.toml
crates/zavora-core/src/: events.rs  lib.rs  models.rs  standards.rs  storage.rs
crates/zavora-eventstore/: Cargo.toml
crates/zavora-eventstore/src/: lib.rs
crates/zavora-finance/: Cargo.toml
crates/zavora-finance/src/: lib.rs
crates/zavora-gateway/: Cargo.toml
crates/zavora-gateway/src/: main.rs
crates/zavora-inventory/: Cargo.toml
crates/zavora-inventory/src/: lib.rs
crates/zavora-memory/: Cargo.toml
crates/zavora-memory/src/: main.rs
crates/zavora-ops/: Cargo.toml
crates/zavora-ops/src/: main.rs
crates/zavora-platform/: Cargo.toml
crates/zavora-platform/src/: config.rs  contracts.rs  db.rs  lib.rs  redis_bus.rs
crates/zavora-server/: Cargo.toml
crates/zavora-server/src/: main.rs
crates/zavora-tools/: Cargo.toml
crates/zavora-tools/src/: lib.rs
docker/postgres/init/: 001_schema.sql
docs/: agents.md  functional-units.md  organization.md  roadmap.md  sequence-diagrams-user-journeys.md  spec-design-and-tasks.md  spec-requirements.md
