[workspace]
members = [
  "crates/zavora-core",
  "crates/zavora-eventstore",
  "crates/zavora-finance",
  "crates/zavora-inventory",
  "crates/zavora-agents",
  "crates/zavora-tools",
  "crates/zavora-server",
  "crates/zavora-platform",
  "crates/zavora-gateway",
  "crates/zavora-ops",
  "crates/zavora-board",
  "crates/zavora-memory",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
authors = ["Zavora"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
redis = { version = "0.27", features = ["tokio-comp"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "rust_decimal", "json"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
