[package]
name = "zavora-agents"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
zavora-core = { path = "../zavora-core" }
zavora-tools = { path = "../zavora-tools" }
