[package]
name = "zavora-eventstore"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
zavora-core = { path = "../zavora-core" }
tokio.workspace = true
