[package]
name = "zavora-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
zavora-core = { path = "../zavora-core" }
zavora-eventstore = { path = "../zavora-eventstore" }
zavora-finance = { path = "../zavora-finance" }
zavora-inventory = { path = "../zavora-inventory" }
